'modus-vivendi-tinted' for easier legibility, as well as
'modus-operandi-deuteranopia', 'modus-vivendi-deuteranopia',
'modus-operandi-tritanopia', and 'modus-vivendi-tritanopia' to cover
the needs of users with red-green or blue-yellow color deficiency.
The Info manual "(modus-themes) Top" describes the details and
showcases all their customization options.


* Incompatible Lisp Changes in Emacs 30.1

+++
** 'M-TAB' now invokes 'completion-at-point' also in Text mode.
Text mode no longer binds 'M-TAB' to 'ispell-complete-word', and
instead this mode arranges for 'completion-at-point', globally bound
to 'M-TAB', to perform word completion as well.  If you want 'M-TAB'
to invoke 'ispell-complete-word', as it did in previous Emacs
versions, customize the new user option
'text-mode-meta-tab-ispell-complete-word' to non-nil.

** 'pp' and 'pp-to-string' now always include a terminating newline.
In the past they included a terminating newline in most cases but not all.

** 'buffer-match-p' and 'match-buffers' take '&rest args'.
They used to take a single '&optional arg' and were documented to use
an unreliable hack to try and support condition predicates that
don't accept this optional arg.
The new semantics makes no such accommodation, but the code still
supports it (with a warning) for backward compatibility.

** 'post-gc-hook' runs after updating 'gcs-done' and 'gcs-elapsed'.

---
** The escape sequence '\x' not followed by hex digits is now an error.
Previously, '\x' without at least one hex digit denoted character code
zero (NUL) but as this was neither intended nor documented or even
known by anyone, it is now treated as an error by the Lisp reader.

---
** Connection-local variables are applied in buffers visiting a remote file.
This overrides possible directory-local or file-local variables with
the same name.

---
** User option 'tramp-completion-reread-directory-timeout' has been removed.
This user option has been obsoleted in Emacs 27, use